fix: 38_VirtualThreadsDemo のコードレビュー指摘を解消
Issue #170で指摘された、1件の疎通失敗・不正なURLがアプリ全体をクラッシュさせる
問題、Virtual Thread/Platform Threadの所要時間比較ができない問題、HttpClientに
タイムアウトがない問題を解消する。

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>